[FIX] movingWordBorder: Changed spacing between top and bottom words

--- a/my-portfolio/src/components/movingWordBorder/movingWordBorder.css
+++ b/my-portfolio/src/components/movingWordBorder/movingWordBorder.css
@@ -9,13 +9,13 @@
 }
 
 .top-border, .bottom-border {
-  width: 100%;
+  width: 150%;
   height: 100px;
   white-space: nowrap;
 }
 
 .left-border, .right-border {
-  height: 100%;
+  height: 150%;
   width: 100px;
   flex-direction: column;
 }
@@ -24,6 +24,14 @@
 .bottom-border { bottom: 0; left: 0; }
 .left-border { left: 0; }
 .right-border { right: 0; }
+
+.words-left, .words-right {
+    margin:
+}
+
+.words-top, .words-bottom {
+    margin: 10px;
+}
 
 .moving-text {
   display: inline-block;
